--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,10 @@
 name: Reuse Workflow
 on:
+  pull_request:
+    types: [opened, synchronize, reopened]
   push:
+
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      # Find the PR associated with this push, if there is one.
-      - uses: jwalton/gh-find-current-pr@master
-        id: findPr
-        with:
-          # Can be "open", "closed", or "all".  Defaults to "open".
-          state: open
-      # This will echo "Your PR is 7", or be skipped if there is no current PR.
-      - run: echo "Your PR is ${PR}"
-        if: success() && steps.findPr.outputs.number
-        env:
-          PR: ${{ steps.findPr.outputs.pr }}
+    uses: mahinops/pr-summary-message@testpr
